@@ -1,5 +1,13 @@
 2007-10-18  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-search-engine-simple.c:
+	Remove spew
+	
+        * src/nautilus-query-editor.c:
+        Work around crash getting NULL back as the location.
+
+2007-10-18  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-utilities.[ch]:
 	Add nautilus_is_home_directory and nautilus_is_root_directory
 	
